# plateau-gis-converter

./: .gitattributes  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  openapi.yml  package-lock.json  rust-toolchain.toml  rustfmt.toml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: migrated.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: example.rs  main.rs
atlas-packer/: Cargo.toml  LICENSE  README.md  rustfmt.toml
atlas-packer/examples/: test_pack.rs  test_pack_dice.rs  test_random_polygon.rs  test_unused_pixels.rs
atlas-packer/examples/utils/: mod.rs  unused_pixels.rs
atlas-packer/src/: disjoint_set.rs  export.rs  lib.rs  pack.rs  place.rs  texture.rs
atlas-packer/src/texture/: cache.rs  mod.rs  utils.rs
nusamai/: Cargo.toml  hoge.geojson  schema.json  test_brid.kml  test_sink_kml.kml
nusamai-3dtiles/nusamai-3dtiles-json/: Cargo.toml
nusamai-3dtiles/nusamai-3dtiles-json/tests/: load_json.rs
nusamai-citygml/: Cargo.toml
nusamai-citygml/macros/: Cargo.toml  README.md
nusamai-citygml/macros/src/: derive.rs  lib.rs  type_attrs.rs
nusamai-citygml/src/: appearance.rs  attribute.rs  codelist.rs  geometry.rs  lib.rs  namespace.rs  object.rs  parser.rs  schema.rs  values.rs
nusamai-citygml/tests/: test_generics.rs  test_values.rs  values.rs
nusamai-czml/: Cargo.toml
nusamai-czml/data/: sample.geojson  sample_czml.json
nusamai-czml/src/: conversion.rs  lib.rs  types.rs
nusamai-czml/src/models/: arc_type.rs  articulation.rs  checkerboard_material.rs  classification_type.rs  color.rs  color_blend_mode.rs  czml.rs  czml_boolean.rs  czml_double.rs  czml_integer.rs  czml_polygon.rs  czml_string.rs  czml_uri.rs  deletable_property.rs  distance_display_condition.rs  document.rs  grid_material.rs  height_reference.rs  image_material.rs  interpolatable_property.rs  line_count.rs  line_offset.rs  line_thickness.rs  material.rs  mod.rs  model.rs  node_transformations.rs  packet.rs  polygon.rs  position_list.rs  position_list_of_lists.rs  repeat.rs  rotation.rs  scale.rs  shadow_mode.rs  solid_color_material.rs  string_object.rs  stripe_material.rs  stripe_orientation.rs  tileset.rs  (+1 more)
nusamai-czml/tests/: load_examples.rs
nusamai-czml/tests/samples/: DeletePacket.json  ModelArticulations.json  ModelSample1.json  Packet.json
nusamai-geojson/: Cargo.toml
nusamai-geojson/examples/: build_semantic_elements.rs  citygml_polygons.rs  gml2geojson.rs  slice.rs
nusamai-geojson/src/: conversion.rs  lib.rs
nusamai-geometry/: Cargo.toml  README.md
nusamai-geometry/doc/: nusamai-geometry.key
nusamai-geometry/examples/: citygml_polygons.rs  geo_interop.rs
nusamai-geometry/src/: compact.rs  lib.rs
nusamai-geometry/src/compact/: linestring.rs  mod.rs  multi_linestring.rs  multi_point.rs  multi_polygon.rs  polygon.rs
nusamai-geometry/tests/: geo_interop.rs  georust_interop.rs  serde.rs
nusamai-geopackage/: Cargo.toml
nusamai-geopackage/examples/: gml2gpkg.rs
nusamai-gltf/: Cargo.toml  README
nusamai-gltf/examples/: README  geometry_to_gltf.rs  gltftest.rs  gml2gltf.rs  main.rs  make_gltf.rs  object_to_gltf.rs
nusamai-gltf/nusamai-gltf-json/: Cargo.toml
nusamai-gltf/nusamai-gltf-json/tests/: load_3d_tiles_examples.rs  load_examples.rs
nusamai-gltf/other/: make_gltf.rs
nusamai-gltf/src/: conversion.rs  export.rs  generator.rs  glb.rs  import.rs  lib.rs  sequence.rs
nusamai-gltf/src/las/: mod.rs  public_header.rs
nusamai-gltf/src/models/: accessor.rs  animation.rs  asset.rs  buffer.rs  camera.rs  gltf.rs  image.rs  material.rs  mesh.rs  mod.rs  node.rs  sampler.rs  scene.rs  skin.rs  texture.rs  texture_info.rs
nusamai-gltf/tests/: load_3d_tiles_examples.rs  load_examples.rs  test_load_examples.rs
nusamai-gpkg/: .gitignore  Cargo.toml
nusamai-gpkg/examples/: gml2gpkg.rs  init.rs
nusamai-gpkg/src/: geometry.rs  handler.rs  lib.rs  table.rs
nusamai-gpkg/src/sql/: gpkg_template.sql  init.sql  mpoly3d.sql  srs.sql
nusamai-kml/: .gitignore  Cargo.toml
nusamai-kml/examples/: write.rs  write_kml.rs
nusamai-kml/src/: conversion.rs  lib.rs
nusamai-mvt/: Cargo.toml  build.rs
nusamai-mvt/examples/: create_pmtiles.rs
nusamai-mvt/src/: geometry.rs  lib.rs  tag.rs  vector_tile.proto  vector_tile.rs  webmercator.rs
nusamai-mvt/src/tileid/: hilbert.rs  mod.rs
nusamai-plateau/: Cargo.toml  schema.json
nusamai-plateau/citygml/: Cargo.toml
nusamai-plateau/citygml/macros/: README.md
nusamai-plateau/citygml/src/: codelist.rs  geometric.rs  geometry.rs  lib.rs  model.rs  namespace.rs  object.rs  parser.rs  values.rs
nusamai-plateau/citygml/tests/: test_values.rs
nusamai-plateau/examples/: parse.rs  parse_and_compress.rs  render_schema.rs  schema_to_dot.py
nusamai-plateau/src/: appearance.rs  entity.rs  lib.rs
nusamai-plateau/src/codelist/: mod.rs  resolver.rs  xml.rs
nusamai-plateau/src/models/: appearance.rs  bridge.rs  building.rs  city_furniture.rs  cityfurniture.rs  cityobjectgroup.rs  core.rs  generics.rs  landuse.rs  mod.rs  other_construction.rs  relief.rs  transportation.rs  tunnel.rs  urban_planning_area.rs  (+2 more)
nusamai-plateau/tests/: load_examples.rs  render_schema.rs  test_area.rs  test_bridge.rs  test_building.rs  test_building_lod4.rs  test_cityfurniture.rs  test_generics.rs  test_landslide.rs  test_landuse.rs  test_other_construction.rs  test_railway.rs  test_railways.rs  test_relief.rs  test_roads.rs  test_simple.rs  test_track.rs  test_transportation.rs  test_transportations.rs  test_tunnel.rs  test_underground.rs  test_urf.rs  test_utility_network.rs  test_vegetation.rs  test_waterbody.rs  utils.rs
nusamai-voxelize/: Cargo.toml
nusamai-voxelize/examples/: voxelize.rs
nusamai-voxelize/src/: lib.rs  voxelize.rs
nusamai/data/: extract_spec.py  plateau_spec.json  specification_attachedTable1.xlsx
nusamai/examples/: gltftest.rs  gml2geojson.rs  gml2gltf.rs  gml2gpkg.rs  gml2sliced_geojson.rs
nusamai/src/: configuration.rs  lib.rs  main.rs  option.rs
nusamai/tests/: geojson_source.rs  noop_sink.rs  pipeline.rs  rules.json  run_cmd.rs  serde_sink.rs  sink.rs
(+925 files in other folders)
