[workspace]
members = [
  "nusamai-*",
  "nusamai-*/nusamai-*-json",
]
resolver = "2"

[workspace.package]
authors = ["MIERUNE Inc. <info@mierune.co.jp>", "Re:Earth Flow Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/reearth/plateau-gis-converter"
rust-version = "1.77" # Remember to update clippy.toml as well
version = "0.1.0"

[profile.dev]
opt-level = 0

[profile.debug-fast]
debug = true
incremental = false
inherits = "release"
panic = "unwind"
strip = "none"

[profile.release-lto]
codegen-units = 8
inherits = "release"
lto = "fat"

[workspace.dependencies]
ahash = "0.8.11"
chrono = "0.4.38"
indexmap = "2.4.0"
log = "0.4.22"
once_cell = "1.19.0"
quick-xml = "0.36.1"
regex = "1.10.6"
serde = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
url = "2.5.2"
