[workspace]
members = [
    "app/src-tauri",
    "nusamai-*",
    "nusamai-*/nusamai-*-json",
    "nusamai",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]

[profile.dev.package."*"]
opt-level = 3

[profile.release-lto]
inherits = "release"
codegen-units = 8
lto = "fat"
