[package]
edition = "2021"
name = "nusamai-citygml"
version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "flatgeom/serde", "serde_json"]

[dependencies]
ahash = "0.8.11"
chrono = { version = "0.4.40", features = ["serde"], default-features = false }
flatgeom = "0.0.2"
indexmap = { version = "2.8.0", features = ["serde"] }
log = "0.4.26"
macros = { path = "./macros" }
nusamai-projection = { path = "../nusamai-projection" }
once_cell = "1.21.0"
quick-xml = "0.37.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", features = ["indexmap"], optional = true }
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
