[package]
edition = "2021"
name = "nusamai-czml"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
flatgeom = "0.0.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["float_roundtrip"] }

[dev-dependencies]
glob = "0.3.2"
