[package]
name = "nusamai-geojson"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = "0.24.1"
nusamai-geometry = { path = "../nusamai-geometry" }
serde_json = { workspace = true, features = ["indexmap"] }
