[package]
name = "nusamai-geometry"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"], optional = true }

[dev-dependencies]
geo-types = "0.7.13"
geojson = "0.24.1"
indexmap = "2.2.6"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
