[package]
name = "nusamai-geometry"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-traits = "0.2.18"
serde = {workspace = true, features = ["derive"], optional = true}

[dev-dependencies]
geo-types = "0.7.13"
geojson = "0.24.1"
indexmap.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
thiserror.workspace = true
