[package]
name = "nusamai-gltf"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
earcut = "0.4"
indexmap.workspace = true
nusamai-geometry = { path = "../nusamai-geometry" }
nusamai-gltf-json = { "path" = "nusamai-gltf-json" }
quick-xml.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
glob = "0.3.1"
