[package]
name = "nusamai-gltf"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nusamai-gltf-json = { "path" = "nusamai-gltf-json" }
byteorder = "1.5.0"
serde_json = "1.0.115"

[dev-dependencies]
glob = "0.3.1"
