[package]
edition = "2021"
name = "nusamai-gltf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
nusamai-gltf-json = { "path" = "nusamai-gltf-json" }
serde_json = "1.0.140"

[dev-dependencies]
glob = "0.3.2"
