[package]
name = "nusamai-gpkg"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
nusamai-geometry = { path = "../nusamai-geometry" }
thiserror = "1.0.58"
url = "2.5.0"
indexmap = "2.2.6"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
