[package]
name = "nusamai-gpkg"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
nusamai-geometry = { path = "../nusamai-geometry" }
thiserror.workspace = true
url.workspace = true
indexmap.workspace = true

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
