[package]
name = "nusamai-gpkg"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
indexmap.workspace = true
nusamai-geometry = { path = "../nusamai-geometry" }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
