[package]
name = "nusamai-kml"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kml = "0.8.5"
nusamai-geometry = { path = "../nusamai-geometry" }
