[package]
name = "nusamai-mvt"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ahash = "0.8.11"
indexmap.workspace = true
prost = "0.12.6"

[build-dependencies]
prost-build = "0.12.3"
