[package]
edition = "2021"
name = "nusamai-plateau"
version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"], default-features = false }
flatgeom = "0.0.2"
hashbrown = { version = "0.15.2", features = ["serde"] }
indexmap = "2.7.0"
log = "0.4.22"
nusamai-citygml = { path = "../nusamai-citygml", features = ["serde"] }
once_cell = "1.20.2"
quick-xml = "0.37.2"
serde = { version = "1.0.217", features = ["derive", "rc"], optional = true }
stretto = "0.8.4"
url = "2.5.4"

[dev-dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde", "std"] }
clap = { version = "4.5.23", features = ["derive"] }
lz4_flex = "0.11.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
zstd = { version = "0.13.2", features = ["zdict_builder"] }
