[package]
edition = "2021"
name = "nusamai-plateau"
version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"], default-features = false }
flatgeom = "0.0.2"
hashbrown = { version = "0.15.2", features = ["serde"] }
indexmap = "2.8.0"
log = "0.4.26"
nusamai-citygml = { path = "../nusamai-citygml", features = ["serde"] }
once_cell = "1.21.0"
quick-xml = "0.37.2"
serde = { version = "1.0.219", features = ["derive", "rc"], optional = true }
stretto = "0.8.4"
url = "2.5.4"

[dev-dependencies]
bincode = { version = "2.0.0", default-features = false, features = ["serde", "std"] }
clap = { version = "4.5.23", features = ["derive"] }
lz4_flex = "0.11.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zstd = { version = "0.13.3", features = ["zdict_builder"] }
