[package]
name = "nusamai-plateau"
version.workspace = true
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
quick-xml = "0.38.3"
serde = { version = "1.0.226", features = ["derive", "rc"], optional = true }
nusamai-citygml = { path = "../nusamai-citygml", features = ["serde"]}
flatgeom = "0.0"
chrono = { version = "0.4.42", features = ["serde"], default-features = false }
url = "2.5.7"
stretto = "0.8.4"
hashbrown = { version = "0.16.0", features = ["serde"] }
indexmap = "2.11.4"
log = "0.4.28"
zip = "4.6.1"

[dev-dependencies]
zstd = { version = "0.13.3", features = ["zdict_builder"] }
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
lz4_flex = "0.11.5"
serde_json = "1.0.145"
