[package]
name = "nusamai-voxelize"
version = "0.1.0"
edition = "2021"

[dependencies]
nusamai-geometry = { path = "../nusamai-geometry" }
earcut = "0.4"
byteorder = "1.5.0"
serde_json = "1.0.115"
glam = "0.27.0"
hashbrown = "0.14.5"
indexmap = "2.2.6"

[dev-dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
