[package]
name = "nusamai"
version.workspace = true
edition = "2021"

[dependencies]
indexmap = { version = "2.10.0", features = ["serde", "rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
nusamai-plateau = { path = "../nusamai-plateau" }
nusamai-citygml = { path = "../nusamai-citygml" }
quick-xml = "0.37.5"
clap = { version = "4.5.41", features = ["derive", "string"] }
thiserror = "2"
ctrlc = "3.4.7"
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
lz4_flex = "0.11.5"
nusamai-geojson = { path = "../nusamai-geojson" }
nusamai-gltf = { path = "../nusamai-gltf" }
nusamai-gltf-json = { path = "../nusamai-gltf/nusamai-gltf-json" }
cesiumtiles = { git = "https://github.com/MIERUNE/cesiumtiles-rs.git" }
flatgeom = { version = "0.0", features = ["serde"] }
nusamai-czml = { path = "../nusamai-czml" }
nusamai-projection = { path = "../nusamai-projection" }
tinymvt = "0.1.0"
fastanvil = "0.31.0"
fastnbt = "2.5.0"
geojson = "0.24.2"
serde_json = { version = "1.0.141", features = ["indexmap"] }
url = "2.5.4"
nusamai-gpkg = { path = "../nusamai-gpkg" }
tokio = { version = "1.46", features = ["full"] }
byteorder = "1.5.0"
hashbrown = { version = "0.15.4", features = ["serde"] }
log = { version = "0.4.27" }
pretty_env_logger = "0.5.0"
itertools = "0.14"
prost = "0.13.5"
bytesize = "2.0.1"
nusamai-shapefile = { path = "../nusamai-shapefile" }
shapefile = "0.6.0"
earcut = "0.4"
glob = "0.3.2"
shellexpand = "3.1.1"
kml = "0.8.7"
nusamai-kml = { path = "../nusamai-kml" }
image = { version = "0.25.6", default-features = false, features = ["rayon", "tiff", "jpeg", "webp", "png"] }
flate2 = "1.1.2"
chrono = "0.4.41"
kv-extsort = { git = "https://github.com/ciscorn/kv-extsort-rs.git" }
bytemuck = { version = "1.23.1", features = ["derive"] }
dda-voxelize = "0.2.0-alpha.1"
atlas-packer = { git = "https://github.com/MIERUNE/atlas-packer.git" }
tempfile = "3.20.0"
glam = "0.30"
foldhash = "0.1.5"
geocentric = "0.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
zip = "4.0.0"

[dev-dependencies]
rand = "0.9.2"
tokio = { version = "1.46", features = ["full"] }
byteorder = "1.5.0"
glob = "0.3.2"
assert_cmd = "2.0.17"
