[package]
name = "nusamai"
version.workspace = true
edition = "2021"

[dependencies]
indexmap = { version = "2.11.4", features = ["serde", "rayon"] }
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
nusamai-plateau = { path = "../nusamai-plateau" }
nusamai-citygml = { path = "../nusamai-citygml" }
quick-xml = "0.38.3"
clap = { version = "4.5.48", features = ["derive", "string"] }
thiserror = "2"
ctrlc = "3.5.0"
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
lz4_flex = "0.11.5"
nusamai-geojson = { path = "../nusamai-geojson" }
nusamai-gltf = { path = "../nusamai-gltf" }
nusamai-gltf-json = { path = "../nusamai-gltf/nusamai-gltf-json" }
cesiumtiles = { git = "https://github.com/MIERUNE/cesiumtiles-rs.git" }
flatgeom = { version = "0.0", features = ["serde"] }
nusamai-czml = { path = "../nusamai-czml" }
nusamai-projection = { path = "../nusamai-projection" }
tinymvt = "0.2.4"
fastanvil = "0.32.0"
fastnbt = "2.6.0"
geojson = "0.24.2"
serde_json = { version = "1.0.145", features = ["indexmap"] }
url = "2.5.7"
nusamai-gpkg = { path = "../nusamai-gpkg" }
tokio = { version = "1.47", features = ["full"] }
byteorder = "1.5.0"
hashbrown = { version = "0.16.0", features = ["serde"] }
log = { version = "0.4.28" }
pretty_env_logger = "0.5.0"
itertools = "0.14"
prost = "0.14.1"
bytesize = "2.1.0"
nusamai-shapefile = { path = "../nusamai-shapefile" }
shapefile = "0.7.0"
earcut = "0.4"
glob = "0.3.3"
shellexpand = "3.1.1"
kml = "0.11.0"
nusamai-kml = { path = "../nusamai-kml" }
image = { version = "0.25.8", default-features = false, features = ["rayon", "tiff", "jpeg", "webp", "png"] }
flate2 = "1.1.2"
chrono = "0.4.42"
kv-extsort = { git = "https://github.com/ciscorn/kv-extsort-rs.git" }
bytemuck = { version = "1.23.2", features = ["derive"] }
dda-voxelize = "0.2.0-alpha.1"
atlas-packer = { git = "https://github.com/MIERUNE/atlas-packer.git" }
tempfile = "3.23.0"
glam = "0.30"
foldhash = "0.2.0"
geocentric = "0.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
zip = "4.6.1"
pmtiles = "0.16.0"

[dev-dependencies]
rand = "0.9.2"
tokio = { version = "1.47", features = ["full"] }
byteorder = "1.5.0"
glob = "0.3.3"
assert_cmd = "2.0.17"
