[package]
name = "app"
version.workspace = true
description = "GIS Converter for PLATEAU data"
authors.workspace = true
license = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [] }
nusamai = { path = "../../nusamai" }
flatgeom = "0.0"
nusamai-geojson = { path = "../../nusamai-geojson" }
nusamai-plateau = { path = "../../nusamai-plateau" }
nusamai-citygml = {path = "../../nusamai-citygml" }
log = "0.4.27"
tauri-plugin-log = "2.4.0"
thiserror = "2.0.12"
tauri-plugin-fs = "2.3.0"
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
