[package]
name = "app"
version.workspace = true
description = "GIS Converter for PLATEAU data"
authors.workspace = true
license = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
nusamai = { path = "../../nusamai" }
flatgeom = "0.0"
nusamai-geojson = { path = "../../nusamai-geojson" }
nusamai-plateau = { path = "../../nusamai-plateau" }
nusamai-citygml = {path = "../../nusamai-citygml" }
log = "0.4.28"
tauri-plugin-log = "2.7.0"
thiserror = "2.0.16"
tauri-plugin-fs = "2.4.2"
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
zip = "5.1.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "deflate", "stream"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
