[package]
name = "nusamai-3dtiles-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["indexmap", "float_roundtrip"] }
serde_repr = "0.1.18"
nusamai-gltf-json = { path = "../../nusamai-gltf/nusamai-gltf-json" }

[dev-dependencies]
glob = "0.3.1"
